Fix footer spacing on mobile

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,42 +4,29 @@
 	width: 100%;
 	margin-top: 100px;
 	background-color: var(--gray);
-
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 .Footer ul {
-	display: inline-block;
-	text-align: center;
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
 	list-style-position: inside;
 	list-style-type: none;
 	color: var(--white);
-	padding: 2rem 4rem;
+	padding: 2rem 0;
 }
 
 .Footer li {
 	display: inline;
-}
-
-.Footer li:after {
-	content: ' ';
-	letter-spacing: 8em;
-	background-image: url('../../images/bullet.png');
-	background-size: 6px;
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-.Footer li:last-child::after {
-	content: '';
+	padding: 0 2rem;
 }
 
 .Footer a {
-	display: table-cell;
-	vertical-align: middle;
-	line-height: 120%;
 	font-size: 1rem;
 	color: var(--white);
 	text-decoration: none;
